--- a/css/main.css
+++ b/css/main.css
@@ -22,5 +22,18 @@ header {
   grid-template-areas:
   "left center right"
   ". center .";
+
   margin-bottom: 1.5rem;
+}
+
+header > h1 {
+  grid-area: center;
+  margin: 0;
+  z-index: 0;
+}
+
+nav {
+  background-color: #bd027d;
+  grid-column: 1 / -1;
+  grid-row: 1;
 }
