--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 html {
   box-sizing: border-box;
+  line-height: 1.5;
+  color: #323232;
+  background-color: #bebebe;
+  font-family: Georgia, serif;
 }
 
 *, *::before, *::after {
@@ -20,8 +24,8 @@ header {
   grid-template-columns: auto 10rem auto;
   grid-template-rows: auto 1.5rem auto;
   grid-template-areas:
-  "left center right"
-  ". center .";
+    "left center right"
+    ". center .";
 
   margin-bottom: 1.5rem;
 }
@@ -64,4 +68,40 @@ nav a {
 
 nav a:hover {
   background-color: #960062;
+}
+
+main {
+  padding: 0 1rem;
+}
+
+main p {
+  margin: 0 0 1.5rem;
+  font-size: 1.125rem;
+}
+
+section {
+  padding: 1.5rem 0;
+  border-bottom: 2px solid #afafaf;
+  border-top: 2px solid #afafaf;
+}
+
+h2 {
+  font-family: "PT Sans Narrow", sans-serif;
+  margin: 0 0 1.5rem;
+}
+
+section ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+section ul li {
+  background-color: #ccc;
+  border: 2px solid #afafaf;
+  border-radius: 6px;
 }
